--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
 /.phpunit.cache
 /bootstrap/ssr
-/bootstrap/ssr
-/bootstrap/ssr
-/bootstrap/ssr
-/bootstrap/ssr
-/bootstrap/ssr
-/bootstrap/ssr
-/bootstrap/ssr
-/bootstrap/ssr
 /node_modules
 /public/build
 /public/hot
@@ -15,6 +7,7 @@
 /storage/*.key
 /vendor
 .env
+.env.testing
 .env.backup
 .env.production
 .phpunit.result.cache
@@ -26,3 +19,4 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+.php-cs-fixer.cache
