--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "App\\Infrastructure\\Persistence\\Models\\": "app/Infrastructure/Persistence/Models/"
         }
     },
     "autoload-dev": {
