--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@vitejs/plugin-vue": "^5.0.4",
         "bootstrap": "^5.3.3",
         "laravel-permission-to-vuejs": "^3.0.2",
+        "vue-i18n": "^9.13.1",
         "ziggy": "^2.4.0",
         "ziggy-js": "github:tightenco/ziggy"
     }
