refactor: update git ignore with unwanted files

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ yarn-error.log
 /.idea
 /.vscode
 .php-cs-fixer.cache
+t and controller role
+t did not receive the permissions
+tall php cs fixer
+fixer
