--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@heroicons/vue": "^2.1.4",
+        "@headlessui/vue": "^1.7.22",
+        "@heroicons/vue": "^2.1.5",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^1.0.16",
