--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "@inertiajs/vue3": "^1.0.16",
         "@vitejs/plugin-vue": "^5.0.4",
         "bootstrap": "^5.3.3",
+        "chart.js": "^3.9.1",
         "laravel-permission-to-vuejs": "^3.0.2",
+        "vue-chart-3": "^3.1.8",
         "vue-i18n": "^9.13.1",
         "ziggy": "^2.4.0",
         "ziggy-js": "github:tightenco/ziggy"
