feat: update environment and configuration variables.

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,7 @@ PLACETOPAY_LOGIN=
 PLACETOPAY_TRANKEY=
 PLACETOPAY_BASE_URL=
 PLACETOPAY_TIME_OUT=
+
+NOTIFICATION_DAYS_BEFORE_INVOICE_EXPIRATION=
+NOTIFICATION_DAYS_BEFORE_SUBSCRIPTION_EXPIRATION=
+NOTIFICATION_DAYS_BEFORE_SUBSCRIPTION_COLLECTION=
